versioned_docs/version-0.0.2/ForDevelopers/Settings.md
---
title: Settings
---
| Setting                        | Environment Variable            | Description                                                                           | Values                                                                                                                                                                                                |
|--------------------------------|---------------------------------|---------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `system.execution_mode`        | `LINGODB_EXECUTION_MODE`        | Choose execution backend                                                              | `DEFAULT`: LLVM O2<br/> `CHEAP`: fast LLVM <br/> `SPEED`: omit checks for speed<br/> `DEBUGGING`: LLVM O0 with debug info<br/> `C`: C Backend<br/> `PERF`: LLVM O2, with debug info, record with perf |
| `system.subop.opt`             | `LINGODB_SUBOP_OPT`             | Manually select SubOp optimizations                                                   | Comma-seperated list of the following pass names: `GlobalOpt`, `ReuseLocal`, `Specialize`, `PullGatherUp`, `Compression`                                                                              |
| `system.snapshot_passes`       | `LINGODB_SNAPSHOT_PASSES`       | Enables [snapshotting](Debugging.md#snapshotting)                                     | Boolean value: `true` or `false`                                                                                                                                                                      |
| `system.snapshot_level`        | `LINGODB_SNAPSHOT_LEVEL`        | Sets the detailedness of snapshotting                                                 | `full`: Perform a snapshot after every MLIR pass<br/>`important`: only performs snapshots at selected steps in the compilation pipeline                                                               |
| `system.snapshot_dir`          | `LINGODB_SNAPSHOT_DIR`          | Directory for output of snapshots                                                     | (relative) path to output directory (default: `.`)                                                                                                                                                    |
| `system.execution.perf_file`   | `LINGODB_EXECUTION_PERF_FILE`   | Sets the output path for the perf record output                                       | (relative) path to output path (default: `perf.data`)                                                                                                                                                 |
| `system.execution.perf_binary` | `LINGODB_EXECUTION_PERF_BINARY` | Points to the perf binary that should be used for recording                           | path to perf binary (default: `/usr/bin/perf`)                                                                                                                                                        |
| `system.trace_dir`             | `LINGODB_TRACE_DIR`             | Sets the output directory for [lightweight tracing](Debugging.md#lightweight-tracing) | (relative) path to output directory (default: `.`)                                                                                                                                                    |



